--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <!-- Etiquetas semánticas de html -->
+    <header>
+        <h1>Encabezado de la página web</h1>
+    </header>
+    <nav>
+        <h2>Navegación</h2>
+    </nav>
+    <main>
+        <h3>Parte principal de la Página</h3>
+    </main> 
+    <footer>
+        <h4>Pie de página</h4>
+    </footer>
 </body>
 </html>
